2006-07-26:
	* src/pam_krb5_storetmp.c(main): only use strtoll() if it's
	available, otherwise just use strtol().
	* src/stash.c(_pam_krb5_stash_clone): go back to overwriting the
	template, to avoid uncontrolled growth in the filename.
	* src/session.c(pam_sm_open_session): specify the current real
	UID and GID when creating temporary v4 credential files.  Note the
	guessed UID and GID of the user in the debug message.
	* src/auth.c(pam_sm_authenticate): always specify the current real
	UID and GID when creating temporary v4 credential files.
	* src/stash.c(_pam_krb5_stash_clone): build the new ccache name by
	appending the mkstemp template instead of assuming the previous file
	ended with one
	* configure.ac: check for "long long" explicitly
	* src/storetmp.c(_pam_krb5_storetmp_data): use a long long print
	specifier only if we actually have a "long long" type.  Fix incorrect
	usage of sigaction.

2006-07-25:
	* src/stash.c(_pam_krb5_stash_external_read): note when we try to
	pick up external creds, and when we fail to do so.
	* src/storetmp.c(_pam_krb5_storetmp_data): save and set signal handlers
	before we fork().  Go back to allowing setuid/setgid to fail, but only
	after we attempt to drop setuid/setgid status (which gets to fail, too,
	but renders the helper unuseful).
	* src/sly.c,src/sly.h(_pam_krb5_sly_looks_unsafe,
	_pam_krb5_sly_maybe_refresh): move detection of whether or not it
	looks safe into another function.
	* src/auth.c(pam_sm_setcred): if it doesn't look safe to refresh
	credentials, just return PAM_IGNORE (#197428).
	* src/storetmp.c(_pam_krb5_storetmp_data): save and restore the SIGPIPE
	handler in case our child exits, drop any setuid/setgid pretense
	when we're called from a setuid application (#190159, patch by Jon
	Fautley), bail early if calls to setuid/setgid fail.
	* configure.ac: look for krb5/krb5.h in preference to krb5.h (new in
	MIT Kerberos 1.5)
	* src/stash.c(_pam_krb5_stash_external_read): if the default principal